test/compile-fail/resolution/use/no-root/expected.txt
error: unresolved item `a`
  ┌─ ./test/compile-fail/resolution/use/no-root/top.rhdl:1:5
  │
1 │ use a;
  │     ^ no `a` item

